# rmcli

./: .gitignore  CMakeLists.txt  README.md  main.cpp  registermachine.cpp  registermachine.h
include/: InputLogic.h  registermachine.h
modes/: Fileinput.cpp  Fileinput.h  InteractiveMode.cpp  InteractiveMode.h
src/: InputLogic.cpp  Util.cpp  main.cpp  registermachine.cpp
util/: Util.cpp  Util.h
